--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron"></span>
+      <span class="glyphicon glyphicon-chevron-right"></span>
         <!--add glyphicon glyphicon-chevron-right here-->
       <span class="sr-only">Next</span>
     </a>
